.aws-sam/build/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Resources:
  MyLambdaFunction:
    Type: AWS::Serverless::Function
    Properties:
      Handler: index.handler
      Runtime: nodejs20.x
      CodeUri: MyLambdaFunction
      MemorySize: 128
      Timeout: 30
      VpcConfig:
        SubnetIds:
        - Ref: MySubnet
        SecurityGroupIds:
        - Ref: MyLambdaSecurityGroup
      Environment:
        Variables:
          REDIS_HOST:
            Fn::GetAtt:
            - MyElasticacheRedis
            - RedisEndpoint.Address
      Events:
        OrdersPost:
          Type: Api
          Properties:
            Path: /orders
            Method: post
        OrdersGet:
          Type: Api
          Properties:
            Path: /orders/{orderId}
            Method: get
        OrderItemsPost:
          Type: Api
          Properties:
            Path: /orderItems
            Method: post
        OrderItemsGet:
          Type: Api
          Properties:
            Path: /orderItems/{orderItemId}
            Method: get
    Metadata:
      SamResourceId: MyLambdaFunction
  MyLambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Lambda function
      VpcId:
        Ref: MyVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 6379
        ToPort: 6379
        SourceSecurityGroupId:
          Ref: MySecurityGroup
  MyElasticacheSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: Subnet group for ElastiCache
      SubnetIds:
      - subnet-02c217f126c0ce1d5
  MyElasticacheRedis:
    Type: AWS::ElastiCache::CacheCluster
    Properties:
      CacheNodeType: cache.t2.micro
      Engine: redis
      NumCacheNodes: 1
      Port: 6379
      VpcSecurityGroupIds:
      - Fn::GetAtt:
        - MySecurityGroup
        - GroupId
      CacheSubnetGroupName:
        Ref: MyElasticacheSubnetGroup
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ElastiCache
      VpcId: vpc-066e6a637e37f2752
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 6379
        ToPort: 6379
        SourceSecurityGroupId:
          Ref: MyLambdaSecurityGroup
